Removed the link 'contacts'

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="https://github.com/exlat/ExLat">Repo</a></li>
-              <li><a href="#">Contact</a></li>
+              <!-- <li><a href="#">Contact</a></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -59,7 +59,6 @@
         <p>LaTeX, being a popular typesetting tool, it would be useful if there is some software that interchange various document formats and LaTeX. This includes both export to latex and import from latex. Potential formats are html, xml, different Google document formats(ICS format of Google calendar), etc.</p>
 
         <p>ExLat is free software released under <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL License</a></p>
-        <!-- <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p> -->
       </div>
           <h2>Use Cases</h2>
            <p>The following use cases are identified.</p>
