--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="https://github.com/exlat/ExLat">Repo</a></li>
-              <!-- <li><a href="#">Contact</a></li> -->
+              <li><a href="http://groups.google.com/group/exlat-dev">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
