Added mailing list and updated repo information

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="https://github.com/exlat/ExLat">Repo</a></li>
-              <li><a href="http://groups.google.com/group/exlat-dev">Contact</a></li>
+              <li><a href="https://github.com/exlat/exlat">Repo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -85,6 +84,9 @@
 
             <h2>Source Code</h2>
             <p>You can get the source code of the project by cloning <a href="https://github.com/exlat/ExLat">https://github.com/exlat/ExLat</a></p>
+    
+            <h2> Mailing List </h2>
+            <p>The project mailing list is <a href="http://groups.google.com/group/exlat-dev">http://groups.google.com/group/exlat-dev</a></p>
     </div> <!-- /container -->
 
     <!-- Le javascript
