Updated 'use cases' to GSOC project ideas

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
         <p>ExLat is free software released under <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL License</a></p>
       </div>
-          <h2>Use Cases</h2>
-           <p>The following use cases are identified.</p>
+          <h2>GSOC Ideas List</h2>
             <br />
            <h2>Google Calendar</h2>
            <p> As an initial step we are concentrating on exporting Google calendar (ICS format) to LaTeX Table. All the events related to a particular "Summary string" is converted to a Latex table.</p>
