Updated the new repo link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>Here %user_data is the key word which is replaced by the dynamic content.</p>
 
             <h2>Source Code</h2>
-            <p>You can get the source code of the project by cloning <a href="https://github.com/exlat/ExLat">https://github.com/exlat/ExLat</a></p>
+            <p>You can get the source code of the project by cloning <a href="https://github.com/exlat/exlat">https://github.com/exlat/exlat</a></p>
     
             <h2> Mailing List </h2>
             <p>The project mailing list is <a href="http://groups.google.com/group/exlat-dev">http://groups.google.com/group/exlat-dev</a></p>
